Authentication Updated
